--- a/index.html
+++ b/index.html
@@ -292,9 +292,70 @@
         Media Updates
     </p>
 
+    <div>
+
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="230"  src="https://www.youtube.com/embed/WIw5QXQPjR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        
+    </div>
+        
 </section>
 
+    <p class="news">
+        News
+    </p>
 
+<section class="section10">
+  
+  <div class="section10mainbox">
+
+    <div>
+        <img src="section10/1.jpg" width="240px">
+        <p>Fri Jan 13 2023</p>
+        <h3>A Delegation from Classera</h3>
+        <button>&#8594</button>
+    </div>
+
+    <div>
+        <img src="section10/2.jpg" width="240px">
+        <p>Tue Jan 10 2023</p>
+        <h3>Saylani Welfare International Trust | Sui Northern...</h3>
+        <button>&#8594</button>
+    </div>
+
+    <div>
+        <img src="section10/3.jpg" width="240px">
+        <p>Mon Jan 09 2023</p>
+        <h3>Saylani Welfare in Collaboration with SNGPL</h3>
+        <button>&#8594</button>
+    </div>
+
+    <div>
+        <img src="section10/4.jpg" width="240px">
+        <p>Wed Jan 04 2023</p>
+        <h3>Saylani Welfare International Trust | Bank Alfalah...</h3>
+        <button>&#8594</button>
+    </div>
+
+  </div>  
+
+  <div id="emailbg">
+
+    <div id="email">  
+
+        <h1>Saylani Guide</h1>
+        <input type="email" name="email" placeholder="Enter E-Mail Address"> <button> SUBSCRIBE</button>
+
+    </div>
+
+  </div>
+</section>
 
 </body>
 </html>
